--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     
                 </div>
                 <div class="testimonial-item text-center">
-                    <img src="img/BA3.png" style="width: 100; height: 100auto;">
+                    <img src="img/mrcba3.png" style="width: 100; height: 100auto;">
                     
                 </div>
             </div>
