--- a/blog-single.html
+++ b/blog-single.html
@@ -368,9 +368,9 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4" style="font-size: 20px;">聯絡我們</h5>
-                    <h5 class="text-light mb-4" style="font-size: 20px;">地址：台北市中山區南京東路三段9號3樓</h5>
-                    <h5 class="text-light mb-4" style="font-size: 20px;">諮詢專線：(02) 250 21826</h5>
+                    <h5 class="text-light mb-4" style="color: white; font-size: 18px;">聯絡我們</h5>
+                    <h5 class="text-light mb-4" style="color: white; font-size: 18px;">地址：台北市中山區南京東路三段9號3樓</h5>
+                    <h5 class="text-light mb-4" style="color: white; font-size: 18px;">諮詢專線：(02) 250 21826</h5>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.facebook.com/inumagic"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social rounded-circle" href="http://www.youtube.com/@inumagic999"><i class="fab fa-youtube"></i></a>
@@ -441,3 +441,4 @@
 </body>
 
 </html>
+
