--- a/blog-single.html
+++ b/blog-single.html
@@ -314,7 +314,7 @@
 						<div class="media">
   							<div class="media-object pull-left" style="width:100%; text-align:center;">
     							<a href="https://inumagic.github.io/osa">
-      							<img src="img/12 - 複製.png" class="img-responsive mx-auto d-block" alt="blog">
+      							<img src="img/16.png" class="img-responsive mx-auto d-block" alt="blog">
     							</a>
   						</div>
   						<div class="media-body">
@@ -440,5 +440,6 @@
 </body>
 
 </html>
+
 
 
