--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<div class="blog-clear"></div>
 				<h3>「吞口水」為何要將「嘴巴合起來，舌頭把上顎封起來」才正確？</h3>
 				<p>舌頭有力的兒童或成人，較容易使用舌頭封閉頂著上顎，口腔硬顎處，不頂牙齒便可吞嚥。因需要產生負壓，才容易把口水及食物往食道方向推進，進入消化道，所以，張開嘴巴，是難以吞咽的。因此，正確的吞嚥模式，是舌頭每一次封閉的時候，都是舌頭頂上顎產生完全封閉效應。反之，錯誤的吞嚥模式多是舌頭往牙齒方向推擠，來產生封閉的負壓效應，方便吞嚥。</p>
-				<img src="images/1.jpg" style="max-width: 100%;">
+				<img src="img/1.jpg" style="max-width: 100%;">
 				<div style="text-align: center; margin-bottom: 20px;">
                 <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="https://lin.ee/Qxmw6FR" >馬上諮詢</a>
                 </div>
