--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <div class="row">
       <div class="col-lg-8 col-12">
         <div class="single-main">
-        <h2 style="text-align: center;">整體醫學新知</h2>
-        <p style="text-decoration: underline;">魔法牙醫 潘韞珊院長</p>
+        <h1 style="text-align: center ;color: #ffffff; background-color: #5DADE2; padding: 10px; border-radius: 8px; box-shadow: 2px 2px 4px #000000;">整體醫學新知</h1>    
+        <p style="text-decoration: underline; color: #000000;">魔法牙醫 潘韞珊院長</p>
           <!-- News Head -->
           
 
@@ -190,12 +190,6 @@
       <div class="col-lg-4 col-12">
         <div class="mb-5">
           <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-4" style="margin-top: 5%;">整體醫學新知專欄</h4>
-
-          <div class="d-flex rounded overflow-hidden mb-3">
-            <img class="img-fluid" src="img/c.png" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-            <a href="https://inumagic.github.io/inumagic-mrc/" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
-              style="height: 100px; width: 100%; display: flex; align-items: center;">為什麼小孩牙齒亂、鼻子過敏、學習力差？竟然是「它」惹的禍！</a>
-          </div>
 
           <div class="d-flex rounded overflow-hidden mb-3">
             <img class="img-fluid" src="img/100.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
