--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                    <!-- <p class="d-inline-block border rounded-pill py-1 px-4"></p>-->
                     <p>兒童新式功能性矯正，主要是針對 6–10 歲兒童，在生長發育的黃金時期，透過<strong>可摘式矯正器（Oral Appliance）</strong>，搭配功能性訓練，引導牙齒與顎骨自然排列的「鼻、顎、舌、肌」整合式矯正！。</p>
                     <p>與傳統固定式的「鋼牙矯正」不同，這種方法不需長期黏著或鎖定，而是以「功能引導」為核心，幫助兒童在發育過程中改善：                    
-                    <p><i class="far fa-check-circle text-primary me-3"></i><strong>牙齒排列：</strong>短期內（約 6 個月～1 年）即可明顯變整齊。</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i><strong>牙齒排列：</strong>短期內（約 6 個月～8 個月）即可明顯變整齊。</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i><strong>口呼吸問題：</strong>改善呼吸方式，促進正常鼻呼吸，並有助於預防牙周病與<a href="https://inumagic.github.io/osa/">睡眠呼吸中止症</a>。</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i><strong>過敏狀況：</strong>臨床發現，鼻子過敏有機會改善 90% 以上。</p>        
                     <p><i class="far fa-check-circle text-primary me-3"></i><strong>咬合與肌肉訓練：</strong>包括舌頭、肌肉、呼吸與咀嚼訓練，讓孩子養成正確口腔習慣。</p>
