--- a/treatment.html
+++ b/treatment.html
@@ -128,7 +128,7 @@
     <div>
         <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">矯正裝置配戴教學</h4>
         <iframe
-            src="img/MRC教學與使用(有字幕).mp4" 
+            src="https://www.youtube.com/embed/PUbw6BVtgJU" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -141,7 +141,7 @@
         <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">口周肌肉訓練教學</h4>
         <!-- 下方的 iframe -->
          <iframe
-            src="img/e54d7d43-a346-4d31-9d16-1e447b9b1598.mp4" 
+            src="https://www.youtube.com/embed/tngkfm3AL4s" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
