--- a/treatment.html
+++ b/treatment.html
@@ -141,7 +141,7 @@
         <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">口周肌肉訓練教學</h4>
         <!-- 下方的 iframe -->
          <iframe
-            src="https://www.youtube.com/embed/tngkfm3AL4s" 
+            src="https://www.youtube.com/embed/oZ4bLx4NvB4" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
