--- a/treatment.html
+++ b/treatment.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh">
 
@@ -106,12 +107,12 @@
             <div class="row align-items-center">
 
                 <!-- 左側圖片 -->
-    <div class="col-md-4 text-center mb-3 mb-md-0">
+    <div class="col-md-6 text-center mb-3 mb-md-0">
         <img src="img/96.png" alt="MRC配戴示意" class="img-fluid rounded shadow">
     </div>
 
     <!-- 右側文字 -->
-    <div class="col-md-8">
+    <div class="col-md-6">
             <p><strong>配戴時段建議（家長必讀）</strong></p>
             <p><i class="far fa-check-circle text-primary me-3"></i>看書、看電視、玩桌遊</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>寫功課</p>
@@ -120,12 +121,16 @@
             <p><i class="far fa-check-circle text-primary me-3"></i>第一天先戴約十分鐘</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第二、三天十五分鐘</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第四天開始延長到二十至三十分鐘</p>
+            <p><strong>每2-3個月要回診才是關鍵！</strong></p>
+            <div class="bg-light rounded text-center" style="padding: 30px;">
+            <a href="https://lin.ee/Qxmw6FR" class="btn btn-primary py-2 px-4">馬上預約</a>
+          </div>
             </div>
             </div>
             
 
     <div>
-        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">矯正裝置配戴教學</h4>
+        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">矯正裝置配戴教學</h4>
         <iframe
             src="https://www.youtube.com/embed/PUbw6BVtgJU" 
             title="YouTube video player" 
