--- a/treatment.html
+++ b/treatment.html
@@ -164,7 +164,7 @@
    
     
     <div>
-        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">法國矯正器介紹影片</h4>
+        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">日本矯正器介紹影片</h4>
         <iframe
             src="https://www.youtube.com/embed/tngkfm3AL4s" 
             title="YouTube video player" 
@@ -176,7 +176,7 @@
     </div>
 
     <div>
-        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">日本矯正器介紹影片</h4>
+        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">法國矯正器介紹影片</h4>
         <!-- 下方的 iframe -->
          <iframe
             src="https://www.youtube.com/embed/BUzBNoaG1qA" 
