--- a/treatment.html
+++ b/treatment.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="zh">
 
@@ -105,8 +106,12 @@
             <div class="row align-items-center">
 
             <div class="col-md-6 text-center mb-3 mb-md-0">
-        <img src="img/96.png" alt="MRC配戴示意" class="img-fluid rounded shadow">
-    </div>
+            <img src="img/96.png" alt="MRC配戴示意" class="img-fluid rounded shadow">
+            <div class="bg-light rounded text-center" style="padding: 30px;">
+            <h5>每2-3個月要回診才是關鍵！</h5>
+            <a href="https://lin.ee/Qxmw6FR" class="btn btn-primary py-2 px-4">預約回診</a>
+            </div>
+            </div>
 
     <!-- 右側文字 -->
     <div class="col-md-6">
@@ -119,10 +124,7 @@
             <p><i class="far fa-check-circle text-primary me-3"></i>第一天每次先戴約十分鐘</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第二、三天每次十五分鐘</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第四天開始每次延長到二十至三十分鐘</p>
-            <div class="bg-light rounded text-center" style="padding: 30px;">
-            <h5>每2-3個月要回診才是關鍵！</h5>
-            <a href="https://lin.ee/Qxmw6FR" class="btn btn-primary py-2 px-4">預約回診</a>
-          </div>
+            
           </div>
           </div>
 
@@ -164,7 +166,7 @@
    
     
     <div>
-        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">日本矯正器介紹影片</h4>
+        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">法國矯正器介紹影片</h4>
         <iframe
             src="https://www.youtube.com/embed/tngkfm3AL4s" 
             title="YouTube video player" 
@@ -176,7 +178,7 @@
     </div>
 
     <div>
-        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">法國矯正器介紹影片</h4>
+        <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">日本矯正器介紹影片</h4>
         <!-- 下方的 iframe -->
          <iframe
             src="https://www.youtube.com/embed/BUzBNoaG1qA" 
