--- a/treatment.html
+++ b/treatment.html
@@ -107,8 +107,8 @@
 
             <div class="col-md-6 text-center mb-3 mb-md-0">
             <img src="img/96.png" alt="MRC配戴示意" class="img-fluid rounded shadow">
-            <div class="bg-light rounded text-center" style="padding: 30px;">
-            <h5>每2-3個月要回診才是關鍵！</h5>
+            <div class="bg-light rounded " style="padding: 30px;">
+            <h5 class="text-center">每1-3個月要回診才是關鍵！</h5>
             <a href="https://lin.ee/Qxmw6FR" class="btn btn-primary py-2 px-4">預約回診</a>
             </div>
             </div>
@@ -116,7 +116,7 @@
     <!-- 右側文字 -->
     <div class="col-md-6">
             <p><strong>配戴時段建議（家長必讀）</strong></p>
-            <p>小朋友需在醒著、且在家時配戴擋舌器，不可帶出門，因為戴著時無法正常講話與喝水。適合的配戴時段包含：</p>
+            <p>因為戴著矯正裝置時無法正常講話與喝水，小朋友需在醒著、且在家時配戴擋舌器，不可帶出門。適合的配戴時段包含：</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>看書、看電視、玩桌遊</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>寫功課</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>放學後的休息時間</p>
@@ -124,7 +124,10 @@
             <p><i class="far fa-check-circle text-primary me-3"></i>第一天每次先戴約十分鐘</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第二、三天每次十五分鐘</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第四天開始每次延長到二十至三十分鐘</p>
-            
+            <p><strong>回診注意事項</strong></p>
+            <p style="text-align: left;"><i class="far fa-check-circle text-primary me-3"></i>初期可每月回診</p>
+            <p style="text-align: left;"><i class="far fa-check-circle text-primary me-3"></i>三個月後改為每兩至三個月回診，但一定要按時回診</p>
+            <p style="text-align: left;"><i class="far fa-check-circle text-primary me-3"></i>回診時務必攜帶裝置，讓醫師確認是否已變得太小而影響牙弓發育；通常配戴約半年至八個月就可能出現這種情況。</p>
           </div>
           </div>
 
