--- a/treatment.html
+++ b/treatment.html
@@ -109,6 +109,9 @@
             <img src="img/96.png" alt="MRC配戴示意" class="img-fluid rounded shadow">
             <div class="bg-light rounded " style="padding: 30px;">
             <h5 class="text-center">每1-3個月要回診才是關鍵！</h5>
+            <p style="text-align: left; font-size: 18px;"><i class="far fa-check-circle text-primary me-3"></i>初期可每月回診</p>
+            <p style="text-align: left; font-size: 18px;"><i class="far fa-check-circle text-primary me-3"></i>三個月後改為每兩至三個月回診，但一定要按時回診</p>
+            <p style="text-align: left; font-size: 18px;"><i class="far fa-check-circle text-primary me-3"></i>回診時務必攜帶裝置，讓醫師確認是否已變得太小而影響牙弓發育；通常配戴約半年至八個月就可能出現這種情況。</p>
             <a href="https://lin.ee/Qxmw6FR" class="btn btn-primary py-2 px-4">預約回診</a>
             </div>
             </div>
@@ -123,11 +126,7 @@
             <p><strong>配戴時間採漸進式練習</strong></p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第一天每次先戴約十分鐘</p>
             <p><i class="far fa-check-circle text-primary me-3"></i>第二、三天每次十五分鐘</p>
-            <p><i class="far fa-check-circle text-primary me-3"></i>第四天開始每次延長到二十至三十分鐘</p>
-            <p><strong>回診注意事項</strong></p>
-            <p style="text-align: left;"><i class="far fa-check-circle text-primary me-3"></i>初期可每月回診</p>
-            <p style="text-align: left;"><i class="far fa-check-circle text-primary me-3"></i>三個月後改為每兩至三個月回診，但一定要按時回診</p>
-            <p style="text-align: left;"><i class="far fa-check-circle text-primary me-3"></i>回診時務必攜帶裝置，讓醫師確認是否已變得太小而影響牙弓發育；通常配戴約半年至八個月就可能出現這種情況。</p>
+            <p><i class="far fa-check-circle text-primary me-3"></i>第四天開始每次延長到二十至三十分鐘</p>            
           </div>
           </div>
 
