--- a/treatment.html
+++ b/treatment.html
@@ -132,6 +132,7 @@
 
         <div>
         <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-5 mb-2">矯正裝置配戴教學</h4>
+        <p>配戴矯正裝置的前三個月，可先以練習正確的舌頭吞嚥方式為主；三個月後則可在佩戴時讓上下牙齒稍微用力咬合，這樣能使牙弓擴寬的效果更佳，而適當的咬合動作也有助於腦部發育。</p>
         <iframe
             src="https://www.youtube.com/embed/PUbw6BVtgJU" 
             title="YouTube video player" 
