--- a/treatment.html
+++ b/treatment.html
@@ -171,7 +171,7 @@
     <div>
         <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">日本矯正器介紹影片</h4>
         <iframe
-            src="https://www.youtube.com/embed/tngkfm3AL4s" 
+            src="https://www.youtube.com/embed/McDHHKUOg8Q" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
