--- a/treatment.html
+++ b/treatment.html
@@ -120,6 +120,27 @@
   <source src="your-audio-file.mp3" type="audio/audio1.mp3">
 </audio>
 
+<button id="playBtn">播放 / 暫停</button>
+
+<script>
+  const audio = document.getElementById('mrcAudio');
+  const btn = document.getElementById('playBtn');
+
+  btn.addEventListener('click', () => {
+    if (audio.paused) {
+      audio.play();
+      btn.textContent = "暫停";
+    } else {
+      audio.pause();
+      btn.textContent = "播放";
+    }
+  });
+
+  audio.addEventListener('ended', () => {
+    btn.textContent = "播放";
+  });
+</script>
+
                 
     <!-- 右側文字 -->
     <div class="col-md-6">
