--- a/treatment.html
+++ b/treatment.html
@@ -117,31 +117,9 @@
             </div>
 
 <audio id="mrcAudio">
-  <source src="your-audio-file.mp3" type="audio/mpeg">
+  <source src="audio/audio1.mp3" type="audio/mpeg">
 </audio>
 
-<div id="audioBox" style="width:200px; padding:10px; background:#eee; cursor:pointer;">
-  點我播放語音
-</div>
-
-<script>
-  const audio = document.getElementById('mrcAudio');
-  const box = document.getElementById('audioBox');
-
-  box.addEventListener('click', () => {
-    if (audio.paused) {
-      audio.play();
-      box.textContent = "播放中…（再次點擊暫停）";
-    } else {
-      audio.pause();
-      box.textContent = "點我播放語音";
-    }
-  });
-
-  audio.addEventListener('ended', () => {
-    box.textContent = "點我播放語音";
-  });
-</script>
 
 
                 
