--- a/treatment.html
+++ b/treatment.html
@@ -120,26 +120,44 @@
   <source src="your-audio-file.mp3" type="audio/mpeg">
 </audio>
 
-<button id="playBtn">播放 / 暫停</button>
+<div id="audioBox" style="width:200px; padding:10px; background:#eee; cursor:pointer;">
+  點我播放語音
+</div>
 
 <script>
   const audio = document.getElementById('mrcAudio');
-  const btn = document.getElementById('playBtn');
+  const box = document.getElementById('audioBox');
+  let isPlaying = false;
+  let isProcessing = false; // 避免連點造成中斷錯誤
 
-  btn.addEventListener('click', () => {
-    if (audio.paused) {
-      audio.play();
-      btn.textContent = "暫停";
-    } else {
-      audio.pause();
-      btn.textContent = "播放";
+  box.addEventListener('click', async () => {
+
+    if (isProcessing) return;  // 阻止連點
+    isProcessing = true;
+
+    try {
+      if (!isPlaying) {
+        await audio.play();
+        isPlaying = true;
+        box.textContent = "播放中…（再次點擊暫停）";
+      } else {
+        audio.pause();
+        isPlaying = false;
+        box.textContent = "點我播放語音";
+      }
+    } catch (err) {
+      console.error("播放錯誤：", err);
     }
+
+    isProcessing = false;
   });
 
   audio.addEventListener('ended', () => {
-    btn.textContent = "播放";
+    isPlaying = false;
+    box.textContent = "點我播放語音";
   });
 </script>
+
 
 
 
