--- a/treatment.html
+++ b/treatment.html
@@ -134,7 +134,8 @@
  
 <div style="margin-top: 10px; padding: 20px 20px; background-color: #EFF5FF;">
                 <h5 class="text-center">新式功能性矯正裝置說明語音</h5>
-<style>
+<div style="text-align:center;">
+    <style>
 /* 播放圖示區塊 */
 .audio-play-icon {
   width: 0;
@@ -254,6 +255,7 @@ audio.addEventListener('ended', () => {
   circle.style.left = "0%";
 });
 </script>
+</div>
 </div>
 
 
