--- a/treatment.html
+++ b/treatment.html
@@ -300,7 +300,7 @@ audio.addEventListener('ended', () => {
     <div>
         <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-2">法國矯正器介紹影片</h4>
         <iframe
-            src="https://www.youtube.com/embed/tngkfm3AL4s" 
+            src="https://www.youtube.com/embed/D135Ioj9bjM" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -313,7 +313,7 @@ audio.addEventListener('ended', () => {
         <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mt-2 mb-2">日本矯正器介紹影片</h4>
         <!-- 下方的 iframe -->
          <iframe
-            src="https://www.youtube.com/embed/BUzBNoaG1qA" 
+            src="https://www.youtube.com/embed/McDHHKUOg8Q" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
